--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,7 +31,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.university</groupId>
